fixed word wrapping in new-tweet textarea and tweets template

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -25,7 +25,6 @@ textarea {
   border-bottom-style: solid;
   border-width: medium;
   width: 100%;
-  height: 2em;
   font-weight: 600;
   resize: none;
 }
